# wire-cell-python

./: .gitignore  CLAUDE.md  README.org  pyproject.toml  setup.py  zioinst.sh
.beads/: issues.jsonl
.github/workflows/: wirecell-python-unit-tests.yml
.github/workflows-disabled/: wirecell-python-unit-tests.yml
docs/: ario.org  gen.org  img.org  raygrid.org  sigproc.org
requirements/: base.txt  dfp.txt  img.txt  sigproc.txt  torch.txt  validate.txt
test/: cold-elec-response-gain14-shape2d2.txt  fftspeed.py  gen-test-empty-commands.sh  inspectwc.py  new-field-responses.sh  plot-wires.py  scatterplot.py  test-empty-commands.bats  test-gen-linegen.bats  test-gen-linegen.py  test-response.py  test-util-bbox.py  test-util-peaks.py  test_dfp_graph.py  test_dfp_sim.py  test_dft.py  test_dune_track_response.sh  test_nodedesc.py  test_nxdot.py  test_nxjs.py  test_wan.py  track-response.sh  wct-img-2-bee.py  wct-img-2-depo.py
wirecell/: __main__.py  command.py  index.md  units.py
wirecell/aux/: __main__.py  idft.py  index.md  sysinfo.py
wirecell/bee/: __main__.py  ana.py  data.py  index.md
wirecell/dfp/: __init__.py  dot.py  graph.py  index.md  nodetype.py
wirecell/dnn/: __init__.py  __main__.py  index.md  io.py  tracker.py  train.py
wirecell/dnn/apps/: __init__.py  index.md
wirecell/dnn/cfg/: hyu-pdvd.cfg  jcal-crossview_unets.cfg  jcal-crossview_unets_pdhd.cfg  jcal-dnnroi-spng-dense-uplane-pdhd.cfg  jcal-dnnroi-spng-dense-vplane-pdhd.cfg  jcal-dnnroi-spng-thresh-uplane-pdhd.cfg  jcal-dnnroi-spng-thresh-vplane-pdhd.cfg  jcal-dnnroi-spng-thresh-wplane-pdhd.cfg  jcal-dnnroi-spng-thresh_mpfile_uplane-pdhd.cfg  jcal-dnnroi-spng-thresh_mpfile_vplane-pdhd.cfg  jcal-dnnroi-spng-thresh_mpfile_wplane-pdhd.cfg  jcal-dnnroi-wplane-pdhd-regression.cfg  jcal-hybrid-wcgpu0.cfg  jcal-hybrid.cfg  jcal-pdhd-1in-3out.cfg  jcal-uvitrio.cfg  jcal-xover-wcgpu0.cfg  jcal-xover.cfg  renny-pdhd.cfg
wirecell/dnn/data/: __init__.py  frames.py  hdf.py  index.md
wirecell/dnn/docs/: dnnroi.org  unet.dot
wirecell/dnn/models/: __init__.py  check_scatter.py  cpp_scatter_simpler.py  index.md  scatter.py  test_roundabout.py  unet.py  unet_crossview.py
wirecell/dnn/test/: gen-dnnroi-logo.py  index.md  test_dnnroi.py
wirecell/dnn/trainers/: train.py
wirecell/docs/: __init__.py  __main__.py  index.md
wirecell/img/: __main__.py  anidfg.py  clusters.py  converter.py  dump_bb_clusters.py  dump_blobs.py  index.md  main.py  plot_blobs.py  plot_depos_blobs.py  plots.py  tap.py  vtk.py
wirecell/img/test/: index.md  test_tap.py
wirecell/ls4gan/: __main__.py  index.md
wirecell/pgraph/: __main__.py  index.md  main.py
wirecell/plot/: __main__.py  cli.py  cmaps.py  frames.py  index.md  rebaseline.py
wirecell/pytorch/: __main__.py  index.md  script.py
wirecell/raygrid/: CoordsBugDemo.ipynb  __main__.py  activity.py  chanmap_1536.npy  coordinates.py  crossover.py  examples.py  funcs.py  index.md  plots.py  schema_load.py  test_crossover.py  tiling.py  wires.py
wirecell/raygrid/test/: index.md  sampledata.py  test_coordinates.py  test_examples.py  test_funcs.py  test_inside.py  test_line.py  test_plots.py  test_tiling.py  test_uncombo.py
wirecell/resp/: __main__.py  garfield.py  index.md  plots.py  resample.py  util.py
wirecell/sigproc/: __main__.py  downsample.py  fwd.py  garfield.py  index.md  l1sp.py  main.py  minisim.py  plots.py  track_response.py  track_response_defaults.jsonnet
wirecell/sigproc/noise/: icarus.py  index.md  microboone.py  plots.py  (+2 more)
wirecell/test/: __main__.py  empiricalnoisemodel.py  index.md  noise.py  noisetools.py  ssss.py
wirecell/util/: __init__.py  __main__.py  ario.py  bbox.py  cdm.py  channels.py  cli.py  codec.py  detectors.py  fileio.py  frame_split.py  frames.py  functions.py  gdml.py  index.md  jsio.py  lmn.py  main.py  paths.py  peaks.py  plottools.py  points.py  tdm.py
wirecell/validate/: __main__.py  arrays.py  cmaps.py  index.md  main.py  plots.py  root.py
(+132 files in other folders)
